--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Integration with TMDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./server/index.js",
+    "pretest": "eslint ./server",
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "start": "rm -rf /home/git/.forever/chat.log; forever start --uid 'chat' ./server/index.js",
+    "stop": "forever stop chat"
   },
   "repository": {
     "type": "git",
@@ -17,6 +21,7 @@
   },
   "homepage": "https://github.com/amirun573/integration-tmdb#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2"
   }
 }
