--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "pretest": "eslint ./server",
     "test": "echo \"Error: no test specified\" && exit 0",
     "start": "rm -rf /home/git/.forever/chat.log; forever start --uid 'chat' ./server/index.js",
-    "stop": "forever stop chat"
+    "stop": "forever stop chat",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.43.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
