--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,16 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
     },
+    "plugins": ["node"],
+
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-undef": "error",
+    "node/no-unsupported-features/es-syntax": "off",
     }
 }
