--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/amirun573/integration-tmdb#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "eslint-plugin-node": "^11.1.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
