--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/amirun573/integration-tmdb#readme",
   "dependencies": {
+    "aws-sdk": "^2.1401.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "eslint-plugin-node": "^11.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.4.0",
+    "sequelize": "^6.11.0"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
