--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
   "dependencies": {
     "aws-sdk": "^2.1401.0",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-node": "^1.0.0",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mysql2": "^3.4.0",
-    "sequelize": "^6.11.0"
+    "sequelize": "^6.11.0",
+    "sequelize-cli": "^6.6.1"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.1.1"
   }
